--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,22 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Segoe UI Light';
+    src: url('../fuentes/segoeuil.ttf');
+    font-style: normal;
+    font-weight: normal;
+}
+
 body{
     display: flex;
     background-color:beige;
     min-height: 100vh;    /*altura min = 100% del dispositivo*/
     justify-content:center;
     align-items:center;
+    font-family:'Segoe UI Light' ;
+    font-weight:500;
+    font-stretch:ultra-expanded; 
 }
 
 .container{
@@ -35,7 +45,7 @@ body{
     background-color: white;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    font-family:'Segoe UI Regular' ;
+    
 }
 
 .left-side{
@@ -61,6 +71,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
+    filter: grayscale(100%);
 }
 
 .name-left-box{          /*texto oculto en desktop*/
@@ -116,7 +127,7 @@ body{
 
 .progress{
     position: absolute;
-    background-color: blue;
+    background-color:white;
     height: 100%;
     border-radius: 50px;
 }
@@ -142,7 +153,7 @@ body{
     text-align-last: right;
     width:100%;
     font-size: large;
-    color: blue;
+    color: white;
 }
 
 .hobbies div{
@@ -173,7 +184,8 @@ body{
 }
 
 
-.name-right-box{
+.name-right-box h1{
+    font-size: 45px;
     color:#0e3874;
 }
 
