--- a/css/style.css
+++ b/css/style.css
@@ -259,5 +259,14 @@ body{
     }
     .barr{
         width: 100%;
+    }
+    .name-right-box{
+        display: none;
     } 
+    .education{
+        flex-direction: column;
+    }
+    .experience{
+        flex-direction: column;
+    }
 }
