--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,31 @@ body{
 }
 
 
+/*******************************************************************/
+/*******************************************************************/
+/*******************************************************************/
+header{
+    position: fixed;
+    padding: 5px;
+    z-index: 99; 
+}
+
+nav{
+    position: fixed;
+    display: none;
+    z-index: 50;        /*para superponerse a la img de perfil*/
+    
+}
+
+nav p{
+    display: block;
+}
+
+/*******************************************************************/
+/*******************************************************************/
+/*******************************************************************/
+
+
 /*===================== Imagen de perfil ====================*/
 .profile-img{
     position: relative; /*pos para ser ancestro más cercano posicionado de la img*/
