--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ header{
     text-align: center;
     font-weight: 600;
 }
-hr{color: white;}
+hr{color: white; background-color: white; height: 4px;}
 
 /*============== Apartado de infor de contacto ==============*/
 .contact-info ul li{
