--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,11 @@ header{
     z-index: 99; 
 }
 .nav-bar span{
-    background-image: linear-gradient(45deg, rgba(255, 0, 0, 0.529), rgba(255, 255, 0, 0.448), rgba(0, 128, 0, 0.552), rgba(0, 0, 255, 0.386));
+    background-image: linear-gradient(45deg, 
+                                    rgba(255, 0, 0, 0.529), 
+                                    rgba(255, 255, 0, 0.448), 
+                                    rgba(0, 128, 0, 0.552), 
+                                    rgba(0, 0, 255, 0.386));
     font-size: 30px;
 }
 .nav li{margin: 2px;}
@@ -101,6 +105,7 @@ header{
 .nav div, p{
     display: inline-block;
     vertical-align:middle;
+    cursor: pointer;
 }
 
 /*******************************************************************/
@@ -233,7 +238,7 @@ div.languages{ margin-bottom: 30px;}
     width: 100%;
     justify-content: space-between;
 }
-.net-container img{
+.net-container a img{
     height: 40px;
     width: 40px;
     cursor: pointer;
